<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Test tags-->
    <string name="testTag_topNav_navigateBack">testTag_topNav_navigateBack</string>
    <string name="testTag_topNav_profilePicture">testTag_topNav_profilePicture</string>
    <string name="testTag_topNav_profilePicture_logOut">testTag_topNav_profilePicture_logOut</string>
    <string name="testTag_bottomNav_navigateHome">testTag_bottomNav_navigateHome</string>
    <string name="testTag_bottomNav_navigateProjectsOverview">testTag_bottomNav_navigateProjectsOverview</string>
    <string name="testTag_bottomNav_navigateTimeRegistrationOverview">testTag_bottomNav_navigateTimeRegistrationOverview</string>
    <string name="testTag_bottomNav_navigateAddTimeRegistration">testTag_bottomNav_navigateAddTimeRegistration</string>
    <string name="testTag_navigateHamburger">testTag_navigateHamburger</string>
    <string name="testTag_navigateHamburger_button">testTag_navigateHamburger_button_%1s</string>
    <string name="testTag_projectCard">testTag_projectCard</string>
    <string name="testTag_timeRegistrationOverview_infoCard">testTag_timeRegistrationOverview_infoCard</string>
    <string name="testTag_timeRegistrationOverview_infoCard_card">testTag_timeRegistrationOverview_infoCard_card</string>
    <string name="testTag_timeRegistrationOverview_infoCard_time">testTag_timeRegistrationOverview_infoCard_time</string>
    <string name="testTag_timeRegistrationOverview_infoCard_info">testTag_timeRegistrationOverview_infoCard_info</string>
    <string name="testTag_timeRegistrationOverview_infoCard_moreOptions">testTag_timeRegistrationOverview_infoCard_moreOptions</string>
    <string name="testTag_timeRegistrationOverview_infoCard_edit">testTag_timeRegistrationOverview_infoCard_edit</string>
    <string name="testTag_timeRegistrationOverview_infoCard_delete">testTag_timeRegistrationOverview_infoCard_delete</string>
    <string name="testTag_putTimeRegistration_projectDropdown">testTag_putTimeRegistration_projectDropdown</string>
    <string name="testTag_putTimeRegistration_projectDropdown_option">testTag_putTimeRegistration_projectDropdown_option_%1s</string>
    <string name="testTag_putTimeRegistration_projectDropdown_value">testTag_putTimeRegistration_projectDropdown_value</string>
    <string name="testTag_putTimeRegistration_taskDropdown">testTag_putTimeRegistration_taskDropdown</string>
    <string name="testTag_putTimeRegistration_taskDropdown_option">testTag_putTimeRegistration_taskDropdown_option_%1s</string>
    <string name="testTag_putTimeRegistration_taskDropdown_value">testTag_putTimeRegistration_taskDropdown_value</string>
    <string name="testTag_putTimeRegistration_description">testTag_putTimeRegistration_description</string>
    <string name="testTag_putTimeRegistration_timeEntry">testTag_timeEntry</string>
    <string name="testTag_putTimeRegistration_timeEntry_addButton">testTag_putTimeRegistration_timeEntry_addButton</string>
    <string name="testTag_putTimeRegistration_timeEntry_dialog">testTag_timeEntry_dialog</string>
    <string name="testTag_putTimeRegistration_timeEntry_dialog_keyboardMode">testTag_timeEntry_dialog_keyboardMode</string>
    <string name="testTag_putTimeRegistration_timeEntry_dialog_confirm">testTag_timeEntry_dialog_confirm</string>
    <string name="testTag_putTimeRegistration_timeEntry_dialog_timeField">testTag_timeEntry_dialog_timeField</string>
    <string name="testTag_putTimeRegistration_save">testTag_putTimeRegistration_save</string>
    <string name="testTag_putTimeRegistration_delete">testTag_putTimeRegistration_delete</string>
    <string name="testTag_putTimeRegistration_error">testTag_putTimeRegistration_error</string>
    <string name="testTag_putTimeRegistration_confirmationDialog">testTag_putTimeRegistration_confirmationDialog</string>
    <string name="testTag_putTimeRegistration_confirmationDialog_confirm">testTag_putTimeRegistration_confirmationDialog_confirm</string>
    <string name="testTag_putTimeRegistration_confirmation_confirmButton">testTag_confirmation_confirmButton</string>
    <string name="testTag_putTimeRegistration_modeSwitch_manual">testTag_modeSwitch_manual</string>
    <string name="testTag_putTimeRegistration_modeSwitch_timer">testTag_modeSwitch_timer</string>

    <!--Testing-->
    <string name="test_bearerToken">TestToken</string>
    <string name="test_userName">TestUser</string>
</resources>